tests/init_state/call_transfer/out_transfer_after_write.err.expected
error: at 18:5: [INIT-RefCallEntryMismatch] In function 'f', block 'entry': cannot transfer 'r' across call boundary: &out requires pointee uninitialized at handoff, but pointee is initialized
    |
 13 |   x: i64;
 14 |   r: &out i64;
    |   ------------ reference declared here
 15 |   entry:
    |
    | ...
    |
 17 |     r.* = 5;
 18 |     call take_out(move r);
    |     ^^^^^^^^^^^^^^^^^^^^^
 19 |     return
    |
